--- a/public/contact me.html
+++ b/public/contact me.html
@@ -25,6 +25,9 @@
             <a href="https://github.com/salman-sayeed"> Github</a>
             <a href="https://www.facebook.com/salmansayeed.25"> Facebook</a>
     </ul>
+    
+    <hr />
+    <footer><p>© Salman Sayeed. All rights reserved.</p></footer>
 </body>
 
 </html>
